--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -193,6 +193,10 @@ img.small {
   color: #a02020;
   background-color: #ffe0e0e0;
 }
+.alert-success {
+  color: #20a020;
+  background-color: #e0ffe0;
+}
 .loading {
   display: flex;
   width: 100%;
